--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Batch Reply for Gmail™",
-    "description": "This extension makes it possible to reply to all selected conversations in Gmail™ at once.",
+    "description": "A chrome extension that makes it possible to reply to all selected conversations in Gmail™ at once.",
     "manifest_version": 2,
     "version": "1.0",
     "icons":
