--- a/manifest.json
+++ b/manifest.json
@@ -3,26 +3,29 @@
     "description": "A chrome extension that makes it possible to reply to all selected conversations in Gmail™ at once.",
     "manifest_version": 2,
     "version": "1.2",
-    "icons":
-    {
+    "icons": {
         "16": "assets/img/icon16.png",
         "48": "assets/img/icon48.png",
         "128": "assets/img/icon128.png"
     },
-    "permissions":
-    [
+    "permissions": [
         "webNavigation"
     ],
-    "background":
-    {
-        "scripts": ["assets/js/background.js"],
+    "background": {
+        "scripts": [
+            "assets/js/background.js"
+        ],
         "persistent": true
     },
-    "content_scripts":
-    [
+    "content_scripts": [
         {
-            "matches": ["https://mail.google.com/*"],
-            "js": ["assets/js/jquery.js", "assets/js/content.js"]
+            "matches": [
+                "https://mail.google.com/*"
+            ],
+            "js": [
+                "assets/js/jquery.js",
+                "assets/js/content.js"
+            ]
         }
     ]
 }
